# funcpipe

./: .gitignore  API_DELIVERY_SUMMARY.md  BACKEND_ANALYSIS_REPORT.md  FRONTEND_BLUEPRINT.md  LICENSE  README.md  check_project.py  pyproject.toml  requirements-ui.txt  test_install.py
api/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  requirements.txt  run.py
api/app/: __init__.py  main.py
api/app/core/: config.py  logging.py  operations_registry.py
api/app/models/: schemas.py
api/app/routers/: files.py  operations.py  pipelines.py
api/app/services/: file_service.py  pipeline_service.py
api/tests/: __init__.py  conftest.py  test_api.py
examples/: demo.py  employees.csv  products.json
funcpipe/: __init__.py  cli.py  filters.py  pipeline.py  readers.py  transforms.py  writers.py
funcpipe_ui/: __init__.py  app.py  example_pipelines.json
funcpipe_ui/components/: __init__.py  data_preview.py  export_handler.py  file_loader.py  pipeline_builder.py
funcpipe_ui/utils/: __init__.py  session_state.py
tests/: test_pipeline.py
